fixes row image overflow on chrome

--- a/src/app.scss
+++ b/src/app.scss
@@ -139,6 +139,7 @@ code {
 	gap: 1rem;
 	> * {
 		flex: 1 1 0px;
+		width: 0;
 	}
 	@media (min-width: 640px) {
 		flex-direction: row;
